--- a/index.html
+++ b/index.html
@@ -2,309 +2,168 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>GitHub File Manager</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 <style>
-  body {
-    font-family: "Segoe UI", sans-serif;
-    background: #f5f6fa;
-    margin: 0;
-    color: #222;
-  }
-  header {
-    background: #24292f;
-    color: #fff;
-    padding: 12px 20px;
-    font-size: 20px;
-  }
-  #setup {
-    background: #fff;
-    padding: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    border-bottom: 1px solid #ddd;
-  }
-  #setup input {
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    flex: 1;
-    min-width: 200px;
-  }
-  #setup button {
-    background: #2ea44f;
-    border: none;
-    color: #fff;
-    padding: 8px 16px;
-    border-radius: 6px;
-    cursor: pointer;
-  }
-  #setup button:hover { background: #2c974b; }
-
-  #fileControls {
-    background: #fff;
-    padding: 10px 20px;
-    display: flex;
-    gap: 10px;
-    border-bottom: 1px solid #ddd;
-  }
-  #fileControls button, #fileControls input {
-    padding: 6px 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-  }
-  #fileList {
-    padding: 20px;
-  }
-  .file {
-    padding: 8px 12px;
-    background: #fff;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    margin-bottom: 6px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .file button {
-    border: none;
-    background: #f0f0f0;
-    padding: 5px 10px;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  .file button:hover { background: #ddd; }
-
-  #editor {
-    margin: 20px;
-    display: none;
-    flex-direction: column;
-  }
-  textarea {
-    width: 100%;
-    height: 350px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    font-family: monospace;
-  }
-  #saveBtn {
-    margin-top: 10px;
-    padding: 8px 15px;
-    background: #0969da;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
+body { background:#f9f9f9; font-family: monospace; }
+header { background:#212529; color:white; padding:10px; text-align:center; font-size:1.2em; }
+#loginBox, #fileManager { max-width:900px; margin:20px auto; background:white; border-radius:8px; box-shadow:0 2px 5px rgba(0,0,0,0.1); padding:20px; }
+#fileList td { vertical-align: middle; }
+.folder { color:#007bff; }
+.file { color:#495057; }
+.notice { margin-top:10px; }
 </style>
 </head>
 <body>
-  <header>📂 GitHub File Manager</header>
 
-  <section id="setup">
-    <input type="text" id="username" placeholder="👤 GitHub Username">
-    <input type="text" id="repo" placeholder="📘 Repository Name">
-    <input type="password" id="token" placeholder="🔑 Personal Access Token">
-    <button id="connectBtn">Kết nối</button>
-  </section>
+<header>📁 GitHub File Manager</header>
 
-  <section id="fileControls" style="display:none;">
-    <input type="text" id="newFolder" placeholder="Tên thư mục mới">
-    <button id="createFolderBtn">📁 Tạo thư mục</button>
-    <input type="file" id="uploadFile">
-    <button id="uploadBtn">📤 Upload file</button>
-    <button id="backBtn">⬅️ Quay lại</button>
-  </section>
-
-  <div id="fileList"></div>
-
-  <div id="editor">
-    <h3 id="fileName"></h3>
-    <textarea id="fileContent"></textarea>
-    <button id="saveBtn">💾 Lưu thay đổi</button>
+<div id="loginBox">
+  <h5>🔐 Kết nối đến Repository</h5>
+  <div class="mb-2">
+    <label>👤 Username</label>
+    <input id="user" class="form-control" placeholder="vd: volamtuan">
   </div>
+  <div class="mb-2">
+    <label>📦 Repository</label>
+    <input id="repo" class="form-control" placeholder="vd: volamtuan.github.io">
+  </div>
+  <div class="mb-2">
+    <label>🔑 GitHub Token</label>
+    <input id="token" class="form-control" placeholder="Personal Access Token (PAT)">
+  </div>
+  <button class="btn btn-primary w-100" id="connectBtn">Kết nối Repository</button>
+</div>
+
+<div id="fileManager" style="display:none;">
+  <div class="d-flex justify-content-between align-items-center mb-3">
+    <h5>📂 <span id="currentPath">/</span></h5>
+    <div>
+      <button class="btn btn-success btn-sm" id="newFolderBtn"><i class="bi bi-folder-plus"></i> Tạo thư mục</button>
+      <button class="btn btn-primary btn-sm" id="newFileBtn"><i class="bi bi-file-earmark-plus"></i> Tạo file</button>
+      <button class="btn btn-danger btn-sm" id="logoutBtn"><i class="bi bi-box-arrow-right"></i> Đăng xuất</button>
+    </div>
+  </div>
+  <table class="table table-hover" id="fileList">
+    <thead><tr><th>Tên</th><th>Kích thước</th><th>Hành động</th></tr></thead>
+    <tbody></tbody>
+  </table>
+  <div class="notice" id="status"></div>
+</div>
 
 <script>
-let currentPath = "";
-let currentSha = "";
-let currentFile = "";
+const apiBase = "https://api.github.com";
+let user, repo, token, path = "";
 
-document.getElementById('connectBtn').onclick = loadFiles;
-
-async function loadFiles() {
-  const user = username.value.trim();
-  const repoName = repo.value.trim();
-  const tokenVal = token.value.trim();
-
-  if (!user || !repoName || !tokenVal) {
-    alert("Vui lòng nhập đầy đủ Username, Repo và Token!");
-    return;
-  }
-
-  const api = `https://api.github.com/repos/${user}/${repoName}/contents${currentPath}`;
-  const res = await fetch(api, {
-    headers: { Authorization: `token ${tokenVal}` }
-  });
-  const data = await res.json();
-
-  fileList.innerHTML = "";
-  document.getElementById('fileControls').style.display = "flex";
-
-  data.forEach(item => {
-    const div = document.createElement("div");
-    div.className = "file";
-    div.innerHTML = `
-      <span>${item.type === "dir" ? "📁" : "📄"} ${item.name}</span>
-      <div>
-        ${item.type === "file" ? `<button onclick="editFile('${item.path}','${item.sha}')">Sửa</button>` : ""}
-        <button onclick="deleteItem('${item.path}','${item.sha}')">Xóa</button>
-      </div>
-    `;
-    div.onclick = (e) => {
-      if (e.target.tagName === "BUTTON") return;
-      if (item.type === "dir") {
-        currentPath = "/" + item.path;
-        loadFiles();
-      }
-    };
-    fileList.appendChild(div);
-  });
+function saveConfig() {
+  localStorage.setItem("gh_user", user);
+  localStorage.setItem("gh_repo", repo);
+  localStorage.setItem("gh_token", token);
+}
+function loadConfig() {
+  user = localStorage.getItem("gh_user");
+  repo = localStorage.getItem("gh_repo");
+  token = localStorage.getItem("gh_token");
+  return user && repo && token;
 }
 
-async function editFile(path, sha) {
-  currentFile = path;
-  currentSha = sha;
-  const user = username.value.trim();
-  const repoName = repo.value.trim();
-  const tokenVal = token.value.trim();
-
-  const api = `https://api.github.com/repos/${user}/${repoName}/contents/${path}`;
-  const res = await fetch(api, { headers: { Authorization: `token ${tokenVal}` }});
-  const data = await res.json();
-
-  const content = atob(data.content);
-  fileName.innerText = path;
-  fileContent.value = content;
-  document.getElementById('editor').style.display = "flex";
+async function github(method, endpoint, body=null) {
+  const res = await fetch(`${apiBase}${endpoint}`, {
+    method,
+    headers: {
+      "Authorization": "token " + token,
+      "Accept": "application/vnd.github+json"
+    },
+    body: body ? JSON.stringify(body) : null
+  });
+  if (!res.ok) throw new Error(res.status + " " + res.statusText);
+  return await res.json();
 }
 
-document.getElementById('saveBtn').onclick = async () => {
-  const user = username.value.trim();
-  const repoName = repo.value.trim();
-  const tokenVal = token.value.trim();
-  const api = `https://api.github.com/repos/${user}/${repoName}/contents/${currentFile}`;
-  const content = btoa(fileContent.value);
-
-  const res = await fetch(api, {
-    method: "PUT",
-    headers: {
-      Authorization: `token ${tokenVal}`,
-      "Content-Type": "application/json"
-    },
-    body: JSON.stringify({
-      message: "Cập nhật file qua File Manager",
-      content: content,
-      sha: currentSha
-    })
-  });
-
-  if (res.ok) {
-    alert("✅ Lưu thành công!");
-    loadFiles();
-  } else {
-    alert("❌ Lỗi khi lưu file!");
-  }
-};
-
-document.getElementById('createFolderBtn').onclick = async () => {
-  const folderName = newFolder.value.trim();
-  if (!folderName) return alert("Nhập tên thư mục!");
-  const user = username.value.trim();
-  const repoName = repo.value.trim();
-  const tokenVal = token.value.trim();
-  const api = `https://api.github.com/repos/${user}/${repoName}/contents${currentPath}/${folderName}/.gitkeep`;
-
-  const res = await fetch(api, {
-    method: "PUT",
-    headers: {
-      Authorization: `token ${tokenVal}`,
-      "Content-Type": "application/json"
-    },
-    body: JSON.stringify({
-      message: "Tạo thư mục mới",
-      content: btoa("")
-    })
-  });
-  if (res.ok) {
-    alert("📁 Đã tạo thư mục!");
-    newFolder.value = "";
-    loadFiles();
-  } else {
-    alert("❌ Không thể tạo thư mục!");
-  }
-};
-
-document.getElementById('uploadBtn').onclick = async () => {
-  const file = uploadFile.files[0];
-  if (!file) return alert("Chọn file để upload!");
-  const user = username.value.trim();
-  const repoName = repo.value.trim();
-  const tokenVal = token.value.trim();
-
-  const reader = new FileReader();
-  reader.onload = async () => {
-    const base64 = reader.result.split(",")[1];
-    const api = `https://api.github.com/repos/${user}/${repoName}/contents${currentPath}/${file.name}`;
-    const res = await fetch(api, {
-      method: "PUT",
-      headers: {
-        Authorization: `token ${tokenVal}`,
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify({
-        message: `Upload ${file.name}`,
-        content: base64
-      })
+async function listFiles() {
+  document.getElementById("status").innerText = "🔄 Đang tải...";
+  try {
+    const files = await github("GET", `/repos/${user}/${repo}/contents/${path}`);
+    const tbody = document.querySelector("#fileList tbody");
+    tbody.innerHTML = "";
+    files.forEach(f=>{
+      const tr = document.createElement("tr");
+      tr.innerHTML = `
+        <td><i class="bi ${f.type==="dir"?"bi-folder-fill folder":"bi-file-earmark file"}"></i> 
+          <a href="#" onclick="openPath('${f.path}')">${f.name}</a></td>
+        <td>${f.size || "-"}</td>
+        <td>
+          <button class="btn btn-sm btn-danger" onclick="deleteItem('${f.path}','${f.sha}')"><i class="bi bi-trash"></i></button>
+        </td>`;
+      tbody.appendChild(tr);
     });
-    if (res.ok) {
-      alert("📤 Upload thành công!");
-      loadFiles();
-    } else {
-      alert("❌ Upload thất bại!");
-    }
-  };
-  reader.readAsDataURL(file);
-};
-
-document.getElementById('backBtn').onclick = () => {
-  if (currentPath === "") return;
-  currentPath = currentPath.split("/").slice(0, -1).join("/");
-  if (currentPath === "") currentPath = "";
-  loadFiles();
-};
-
-async function deleteItem(path, sha) {
-  if (!confirm("Bạn có chắc muốn xóa file/thư mục này?")) return;
-  const user = username.value.trim();
-  const repoName = repo.value.trim();
-  const tokenVal = token.value.trim();
-  const api = `https://api.github.com/repos/${user}/${repoName}/contents/${path}`;
-
-  const res = await fetch(api, {
-    method: "DELETE",
-    headers: { Authorization: `token ${tokenVal}` },
-    body: JSON.stringify({ message: "Xóa file", sha })
-  });
-
-  if (res.ok) {
-    alert("🗑️ Đã xóa!");
-    loadFiles();
-  } else {
-    alert("❌ Không thể xóa!");
+    document.getElementById("status").innerText = "✅ Hoàn tất!";
+  } catch(e){
+    document.getElementById("status").innerText = "❌ Lỗi: " + e.message;
   }
+}
+
+async function openPath(newPath) {
+  path = newPath;
+  document.getElementById("currentPath").innerText = "/" + path;
+  await listFiles();
+}
+
+async function deleteItem(p, sha) {
+  if (!confirm("Xoá " + p + " ?")) return;
+  try {
+    await github("DELETE", `/repos/${user}/${repo}/contents/${p}`, { message: "delete "+p, sha });
+    document.getElementById("status").innerText = "🗑️ Đã xoá " + p;
+    await listFiles();
+  } catch(e){ document.getElementById("status").innerText = "❌ Lỗi xoá: " + e.message; }
+}
+
+async function createItem(type) {
+  const name = prompt(`Nhập tên ${type==='dir'?'thư mục':'file'}`);
+  if (!name) return;
+  try {
+    if (type === "dir") {
+      await github("PUT", `/repos/${user}/${repo}/contents/${path}/${name}/.keep`, {
+        message: "create folder " + name,
+        content: btoa("")
+      });
+    } else {
+      await github("PUT", `/repos/${user}/${repo}/contents/${path}/${name}`, {
+        message: "create file " + name,
+        content: btoa("")
+      });
+    }
+    document.getElementById("status").innerText = "✅ Đã tạo " + name;
+    await listFiles();
+  } catch(e){ document.getElementById("status").innerText = "❌ Lỗi tạo: " + e.message; }
+}
+
+document.getElementById("connectBtn").onclick = async ()=>{
+  user=document.getElementById("user").value.trim();
+  repo=document.getElementById("repo").value.trim();
+  token=document.getElementById("token").value.trim();
+  if(!user||!repo||!token)return alert("Vui lòng nhập đầy đủ!");
+  saveConfig();
+  document.getElementById("loginBox").style.display="none";
+  document.getElementById("fileManager").style.display="block";
+  await listFiles();
+};
+
+document.getElementById("newFolderBtn").onclick=()=>createItem("dir");
+document.getElementById("newFileBtn").onclick=()=>createItem("file");
+document.getElementById("logoutBtn").onclick=()=>{
+  localStorage.clear();
+  location.reload();
+};
+
+if(loadConfig()){
+  document.getElementById("loginBox").style.display="none";
+  document.getElementById("fileManager").style.display="block";
+  listFiles();
 }
 </script>
+
 </body>
 </html>
